--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "morgan": "~1.6.1",
     "nodemon": "^1.9.1",
     "path": "^0.12.7",
+    "redis": "^2.6.0-1",
     "serve-favicon": "~2.3.0",
     "socket.io": "^1.4.5"
   }
